--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "version": "0.1.0",
     "author": {
         "name" : "jerome creignou",
-        "url" : "https://github.com/jcreigno/nodejs-scripts"
+        "url" : "https://github.com/jcreigno/nodejs-mail-notifier"
     },
     "repository" : {
         "type" : "git", 
-        "url" : "https://jcreigno@github.com/jcreigno/nodejs-scripts.git"
+        "url" : "git://github.com/jcreigno/nodejs-mail-notifier.git"
     },
     "dependencies": {
         "imap": "~0.3.1",
