--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git://github.com/jcreigno/nodejs-mail-notifier.git"
   },
   "dependencies": {
+    "debug": "^2.2.0",
     "imap": "~0.8.9",
     "mailparser": "~0.4"
   },
