--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "imap": "~0.8.9",
-    "mailparser": "~0.4"
+    "mailparser": "0.6.2"
   },
   "main": "./index.js",
   "devDependencies": {}
